--- a/pillar.example
+++ b/pillar.example
@@ -7,6 +7,11 @@ iis:
       password: 'totallysecret'
     example.net:
       password: 'totallysecret'
+    example.org:
+      password: 'totallysecret'
+      startmode: AlwaysRunning
+      preload: True
+
 #placeholder:
 #  install: True
 #  template: 'salt://iis/templates/placeholder.html.jinja'
